After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730277 - gthread: Fix use of a local variable after it went out of scope
gthread: Fix use of a local variable after it went out of scope
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gthread
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-05-16 21:56 UTC by Philip Withnall
Modified: 2014-05-20 10:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gthread: Fix use of a local variable after it went out of scope (1.40 KB, patch)
2014-05-16 21:56 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2014-05-16 21:56:11 UTC
Patch attached.
Comment 1 Philip Withnall 2014-05-16 21:56:13 UTC
Created attachment 276689 [details] [review]
gthread: Fix use of a local variable after it went out of scope

This could theoretically cause problems, although in practice we would
have seen them by now (the bug was introduced in 2012).

Coverity issue: #1159486
Comment 2 Matthias Clasen 2014-05-19 14:49:54 UTC
Review of attachment 276689 [details] [review]:

ok
Comment 3 Philip Withnall 2014-05-20 10:02:17 UTC
Attachment 276689 [details] pushed as 03a82ce - gthread: Fix use of a local variable after it went out of scope